# tui-logger

./: .travis.yml  CHANGELOG.md  Cargo.toml  DEV_NOTES.md  LICENSE  README.md  bacon.toml  dev_notes.md
.github/workflows/: build_examples.yml  build_examples_latest.yml  cargo_test.yml  docs.yml  semver_checks.yml  test.yml
doc/: demo-short.tape  demo.tape  make_demo_gif.sh  shell.nix
examples/: demo.rs  slog.rs
src/: circular.rs  dispatcher.rs  file.rs  lib.rs  slog.rs  tracing_subscriber.rs
src/config/: level_config.rs  mod.rs
src/event/: crossterm_impl.rs  termion_impl.rs
src/logger/: api.rs  fast_hash.rs  inner.rs  logger.rs  mod.rs  waiter.rs
src/widget/: inner.rs  logformatter.rs  mod.rs  smart.rs  standard.rs  standard_formatter.rs  target.rs
tests/: empty_log.rs  envfilter.rs  formatter_wrap.rs  scroll.rs  scroll_long_wrap.rs  scroll_wrap.rs  simple.rs  wait_signal.rs
