[package]
name = "tui-logger"
version = "0.9.4"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]
edition = "2021"
license = "MIT"
description = "Logger with smart widget for the `tui` crate"
documentation = "https://docs.rs/tui-logger/latest/tui_logger/"
repository = "https://github.com/gin66/tui-logger"
readme = "README.md"
keywords = ["tui", "log", "logger", "widget", "dispatcher"]

[badges]
travis-ci = { repository = "gin66/tui-logger" }

[dependencies]
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tui = { version = "0.19", default-features = false, package = "tui", optional = true }
ratatui = { version = "0.22.0", default-features = false, package = "ratatui", optional = true }
tracing = {version = "0.1.37", optional = true}
tracing-subscriber = {version = "0.3", optional = true}
lazy_static = "1.0"
fxhash = "0.2"
parking_lot = "0.12"
slog = { version = "2.7.0", optional = true }

[dev-dependencies]
termion = "1.5"
env_logger = "0.10.0"

[features]
default = ["tui","tui/termion", "examples-tui-termion"]
tui-rs = ["tui"]
slog-support = ["slog"]
ratatui-support = ["ratatui"]
tracing-support = ["tracing", "tracing-subscriber"]

# This features are exclusively used by examples/demo.rs
examples-tui-termion = ["tui/termion"]
examples-tui-crossterm = ["tui/crossterm"]
examples-ratatui-termion = ["ratatui/termion"]
examples-ratatui-crossterm = ["ratatui/crossterm"]
