[package]
name = "tui-logger"
version = "0.11.1"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]
edition = "2021"
license = "MIT"
description = "Logger with smart widget for the `ratatui` crate"
documentation = "https://docs.rs/tui-logger/latest/tui_logger/"
repository = "https://github.com/gin66/tui-logger"
readme = "README.md"
keywords = ["tui", "log", "logger", "widget", "dispatcher"]

[badges]
travis-ci = { repository = "gin66/tui-logger" }

[dependencies]
log = "0.4"
chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
ratatui = { version = "0.26", default-features = false}
tracing = {version = "0.1.37", optional = true}
tracing-subscriber = {version = "0.3", optional = true}
lazy_static = "1.0"
fxhash = "0.2"
parking_lot = "0.12"
slog = { version = "2.7.0", optional = true }

[dev-dependencies]
# the crate is compatible with ratatui >=0.25.0, but the demo uses features from 0.26.0
ratatui = { version = "0.26", default-features = false}
anyhow = "1.0.79"
env_logger = "0.11.1"
termion = {version = "3.0.0" }
crossterm = {version = "0.27"}

[features]
slog-support = ["slog"]
tracing-support = ["tracing", "tracing-subscriber"]

# only necessary for the demo, the crate does has no dependencies on these
# 
# feature_crossterm_or_termion_must_be_selected to generate one line error message
# instead of many compile error messages, if neither crossterm nor termion are selected.
feature_crossterm_or_termion_must_be_selected = []
crossterm = ["ratatui/crossterm", "feature_crossterm_or_termion_must_be_selected"]
termion = ["ratatui/termion", "feature_crossterm_or_termion_must_be_selected"]

[[example]]
name="demo"
required-features=["feature_crossterm_or_termion_must_be_selected"]
